# flowspecd

./: Cargo.toml  Makefile  README.md  gobgp.toml  rfc4271.txt
.github/workflows/: release.yml
config/: router.toml
py/: exabgp.conf  flowspec.py  pyproject.toml
scripts/: exabgp-test.sh  test-config.toml  test-env-down.sh  test-env-up.sh
src/: api.rs  config.rs  main.rs  metrics.rs  router.rs
src/backend/: mod.rs  nftables.rs
src/bgp/: attributes.rs  command.rs  flowspec.rs  fsm.rs  mod.rs  session.rs  update_builder.rs
src/flowspec/: actions.rs  matcher.rs  mod.rs  rules.rs
src/forwarding/: engine.rs  mod.rs
src/ipfix/: exporter.rs  mod.rs  template.rs
src/stats/: mod.rs
tests/: integration_test.rs
