[package]
name = "flowspecd"
version = "0.1.0"
edition = "2021"
description = "BGP FlowSpec daemon for dynamic firewall rule injection"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
deku = "0.20.3"
nix = { version = "0.29", features = ["fs"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
prometheus = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.2"
thiserror = "2.0.18"
tiny_http = "0.12"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "sync", "fs"] }
